--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,14 +10,17 @@ body {
 }
 
 ul {
-    list-stysle-type: none;
+    list-style-type: none;
+}
+
+nav ul {
     text-align: center;
     background-color: #134670;
     width: 100%;
     height: auto;
 }
 
-ul li {
+nav ul>li {
     display: inline-block;
     padding: 2em;
 }
@@ -63,17 +66,163 @@ li img:hover {
     display: inline-block;
 }
 
+#searchbox .glyphicon {
+    color: #2498f4;
+}
+
 #main {
     width: 80%;
     background-color: #f7f7f7;
     margin: 0 auto;
     margin-top: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
+    padding-top: 5px;
 }
 
-#announcement {}
+#announcement {
+    background-color: #fff;
+    border: 1px solid #e9e9e9;
+    margin: 10px;
+}
 
-#announcement h5 {
+#announcement-head,
+#announcement-txt,
+#announcement-btn {
+    padding: 10px;
+    border-right: 1px solid #e9e9e9;
+    text-align: center;
+}
+
+#announcement-head h5 {
     color: #fe7f13;
     text-transform: uppercase;
+}
+
+#announcement-txt p {
+    font-size: 1.1em;
+    color: #777777;
+    font-weight: 500;
+    text-align: left;
+    paddings-top: 8px;
+}
+
+#announcement-btn {
+    border-right: none;
+}
+
+#announcement-btn .glyphicon {
+    color: #fe7f13;
+    border: 1px solid #e9e9e9;
+    width: 25px;
+    height: 25px;
+    border-radius: 25px;
+    display: inline-block;
+    text-align: center;
+}
+
+.right-container {
+    border-left: 1px solid #e5e5e5;
+}
+
+#main h2 {
+    color: #2498f4;
+    font-weight: 400;
+}
+
+#submain {
+    border: 1px solid #e9e9e9;
+    margin: 10px;
+    margin-top: -10px;
+    background-color: #fff;
+    border-top: none;
+}
+
+#task {
+    border-bottom: 1px solid #e9e9e9;
+}
+
+#activity {
+    color: #cecece;
+    border-bottom: 1px solid #e5e5e5;
+    overflow: auto;
+    height: auto;
+}
+
+#activity-txt {
+    padding-top: 10px;
+}
+
+#pie-chart {
+    border-left: 2px solid #e5e5e5;
+}
+
+.dropdown {
+    color: #979797;
+}
+
+.btn-custome {
+    background-color: #fff;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
+}
+
+#socialmedia {
+    padding: 30px 0;
+}
+
+#socialmedia ul>li {
+    padding-left: 8px;
+    display: inline-block;
+}
+
+#influence {
+    margin-top: 50px;
+    text-align: center;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+#influence img {
+    display: inline-block;
+    padding: 0 20px;
+}
+
+#slider {
+    margin: 20px 0;
+}
+
+#slider-txt {
+    margin: 5px;
+    padding: 20px;
+    font-weight: 300;
+    color: #fff;
+    background-color: #208ce3;
+    height: 130px;
+}
+
+#slider-txt>p {
+    font-size: 13px;
+}
+
+#bottom-container {
+    margin: 10px;
+    margin-top: -10px;
+    background-color: #208ce3;
+    height: 250px;
+}
+
+.photobox {
+    background-color: #fff;
+    border-radius: 5px;
+    height: 180px;
+    width: 27%;
+    margin: 27px 34px;
+}
+
+footer {
+    margin-top: 50px;
+    background-color: #f5f5f5;
+    width: 100%;
+    height: 50px;
+    border-top: 1px solid #e5e5e5;
 }
